Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-1176

welcome page's recent project list is not populated

XMLWordPrintable

      fresh install, empty default session.
      i opened and closed (in random order) 5 projects (without closing creator). the recent project list is still empty.
      the "recent projects" menu in the file menu is properly populated ... to until it suddenly becomes greyed out while i navigate around in the file menu. there seems to be no particular pattern in the behavior.
      restarting creator makes the list being populated.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dt Daniel Teske
            buddenha Oswald Buddenhagen
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes