Fix showing of recent projects list if started with the empty list

Task-Nr: QTCREATORBUG-1176
Reviewed-By: danimo